tests/snapshots/snapshots__budget_ts_pattern_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (491 words)

README.md
   417→### `match`
   419→```ts
   420→match(value);
   421→```
   422→
      →…
   857→#### `P._` wildcard
   859→The `P._` pattern will match any value. You can also use `P.any`, which is an alias to `P._`.
   860→
   861→```ts
   862→import { match, P } from 'ts-pattern';
      →…
  1623→### `P.infer`
  1625→`P.infer<typeof somePattern>` lets you infer a type of value from a type of pattern.
  1626→
  1627→It's particularly useful when validating an API response.
  1628→
      →…
docs/v3-to-v4-migration-guide.md
     3→## Breaking changes …
     5→### Imports …
   128→#### `P.array(pattern)` …
   159→#### `P.optional(pattern)` …
   298→#### `P.infer<typeof pattern>` …
   336→#### `P.symbol` …
docs/v4-to-v5-migration-guide.md
     7→## TypeScript v5 …
    65→## chainable methods …
src/errors.ts
     1→/**
     2→ * Error when the given input value does not match any included pattern
     3→ * and .exhaustive() was specified
     4→ */
     5→export class NonExhaustiveError extends Error {
     6→  constructor(public input: unknown) {
     7→    let displayedValue;
     8→    try {
     9→      displayedValue = JSON.stringify(input);
    10→    } catch (e) {
    11→      displayedValue = input;
    12→    }
    13→    super(`Pattern matching error: no pattern matches value ${displayedValue}`);
    14→  }
    15→}
src/internals/helpers.ts
    12→export const isObject …
    16→export const isMatcher …
    24→const isOptionalPattern …
    32→export const matchPattern …
   120→export const getSelectionKeys …
   132→export const flatMap …
src/internals/symbols.ts
     1→/**
     2→ * Symbols used internally within ts-pattern to construct and discriminate
     3→ * Guard, Not, and Select, and AnonymousSelect patterns
     4→ *
      →…
    16→export const matcher = Symbol.for('@ts-pattern/matcher');
src/is-matching.ts
     6→/**
     7→ * This constraint allows using additional properties
      →…
    11→type PatternConstraint<T> = T extends readonly any[]
    12→  ? P.Pattern<T>
    13→  : T extends object
    14→  ? P.Pattern<T> & UnknownProperties
    15→  : P.Pattern<T>;
src/match.ts
    32→export function match …
    47→class MatchExpression<input, output> {
    48→  constructor(private input: input, private state: MatchState<output>) {}
    49→
    50→  with(...args: any[]): MatchExpression<input, output> {
    51→    if (this.state.matched) return this;
    52→
src/patterns.ts
   187→export function optional …
   536→export function intersection …
   572→export function union …
   611→export function not …
  1251→export function instanceOf …
src/types/DistributeUnions.ts
    41→export type DistributeMatchingUnions …
    80→export type FindUnions …
src/types/InvertPattern.ts
   106→export type InvertPattern …
   303→export type InvertPatternForExclude …
src/types/Match.ts
    10→interface NonExhaustiveError<i> {
    11→  __nonExhaustive: never;
    12→}
    14→interface TSPatternError<i> {
    15→  __nonExhaustive: never;
    16→}
    22→export type Match …
   132→  with …
   245→type DeepExcludeAll …
   261→type Exhaustive …
src/types/Pattern.ts
    43→/**
    44→ * A `Matcher` is an object implementing the match
    45→ * protocol. It must define a `symbols.matcher` property
      →…
    50→export interface Matcher<
    51→  input,
    52→  narrowed,
    53→  // Type of what this pattern selected from the input
    54→  matcherType extends MatcherType = 'default',
    55→  selections extends SelectionType = None,
    56→  // Type to exclude from the input union because
    57→  // it has been fully matched by this pattern
    58→  excluded = narrowed
    59→> {
    60→  [matcher](): MatcherProtocol<
    61→    input,
    62→    narrowed,
    63→    matcherType,
    64→    selections,
    65→    excluded
    66→  >;
    67→  // only used for array matchers
    68→  [symbols.isVariadic]?: boolean;
    69→}
   132→export interface Override<a> {
   133→  [symbols.override]: a;
   134→}
   157→export type Pattern …
   269→      select …
   678→      select …
src/types/helpers.ts
    14→export type LeastUpperBound …
   182→export type GuardValue …
   266→export interface Fn {
   267→  input: unknown;
   268→  output: unknown;
   269→}
