tests/snapshots/snapshots__budget_ts_pattern_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (18 words)

errors.ts
index.ts
internals/helpers.ts
internals/symbols.ts
is-matching.ts
match.ts
patterns.ts
types/BuildMany.ts
types/DeepExclude.ts
types/DistributeUnions.ts
types/ExtractPreciseValue.ts
types/FindSelected.ts
types/InvertPattern.ts
types/IsMatching.ts
types/Match.ts
types/Pattern.ts
types/helpers.ts
types/index.ts
