tests/snapshots/snapshots__budget_ts_pattern_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 25 → level 0 (23 words)

README.md
docs/roadmap.md
docs/v3-to-v4-migration-guide.md
docs/v4-to-v5-migration-guide.md
jest.config.cjs
src/errors.ts
src/index.ts
src/internals/helpers.ts
src/internals/symbols.ts
src/is-matching.ts
src/match.ts
src/patterns.ts
src/types/BuildMany.ts
src/types/DeepExclude.ts
src/types/DistributeUnions.ts
src/types/ExtractPreciseValue.ts
src/types/FindSelected.ts
src/types/InvertPattern.ts
src/types/IsMatching.ts
src/types/Match.ts
src/types/Pattern.ts
src/types/helpers.ts
src/types/index.ts
