tests/snapshots/snapshots__budget_ts_pattern_root_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 800 → level 1 (625 words)

README.md
    40→## About
    48→## Features
    59→## What is Pattern Matching?
    67→## Installation
    87→## Want to become a TypeScript Expert?
    91→# Documentation
   128→## Sandbox examples
   139→## Getting Started
   143→### Example: a state reducer with ts-pattern
   209→### match(value)
   220→### .returnType\<OutputType\>()
   230→### .with(pattern, handler)
   252→### P.select(name?)
   299→### P.not(pattern)
   310→### `P.when()` and guard functions
   319→#### using P.when(predicate)
   334→#### Passing a guard function to `.with(...)`
   349→### the `P._` wildcard
   364→### .exhaustive(), .otherwise() and .run()
   380→### Matching several patterns
   415→## API Reference
   417→### `match`
   425→#### Signature
   431→#### Arguments
   437→### `.with`
   444→#### Signature
   471→#### Arguments
   490→### `.when`
   497→#### Signature
   506→#### Arguments
   516→### `.returnType`
   528→#### Signature
   534→#### Type arguments
   539→### `.exhaustive`
   572→#### Signature
   579→#### Example
   603→### `.otherwise`
   613→#### Signature
   619→#### Arguments
   627→### `.run`
   637→#### Signature
   643→### `.narrow`
   656→#### Signature
   662→#### Example
   680→### `isMatching`
   720→#### Signature
   732→#### Arguments
   742→## Patterns
   777→### Literals
   800→### Objects
   826→### Tuples (arrays)
   855→### Wildcards
   857→#### `P._` wildcard
   876→#### `P.string` wildcard
   894→#### `P.number` wildcard
   912→#### `P.boolean` wildcard
   931→#### `P.nullish` wildcard
   952→#### `P.nonNullable` wildcard
   969→#### `P.bigint` wildcard
   986→#### `P.symbol` wildcard
  1003→### `P.array` patterns
  1030→### Matching variadic tuples with `P.array`
  1051→### `P.record` patterns
  1113→### `P.set` patterns
  1136→### `P.map` patterns
  1166→### `P.when` patterns
  1194→### `P.not` patterns
  1217→### `P.select` patterns
  1298→### `P.optional` patterns
  1318→### `P.instanceOf` patterns
  1350→### `P.union` patterns
  1375→### `P.intersection` patterns
  1405→## `P.string` predicates
  1409→### `P.string.startsWith`
  1422→### `P.string.endsWith`
  1435→### `P.string.minLength`
  1448→### `P.string.length`
  1461→### `P.string.maxLength`
  1474→### `P.string.includes`
  1487→### `P.string.regex`
  1500→## `P.number` and `P.bigint` predicates
  1504→### `P.number.between`
  1517→### `P.number.lt`
  1530→### `P.number.gt`
  1543→### `P.number.lte`
  1556→### `P.number.gte`
  1569→### `P.number.int`
  1582→### `P.number.finite`
  1595→### `P.number.positive`
  1608→### `P.number.negative`
  1621→## Types
  1623→### `P.infer`
  1653→### `P.narrow`
  1667→### `P.Pattern`
  1679→### Type inference
  1685→#### Type narrowing
  1732→#### Type guard function
  1748→#### Exhaustiveness checking
  1766→## Inspirations
docs/roadmap.md
     1→### Roadmap
docs/v3-to-v4-migration-guide.md
     1→# TS-Pattern v3 to v4 Migration Guide
     3→## Breaking changes
     5→### Imports
    39→#### `__`
    57→#### `select()`, `not()`, `when()`
    79→#### `Pattern` type
    91→### list patterns
   111→### NaN
   122→## New features
   126→### Arrays and unary tuples
   128→#### `P.array(pattern)`
   157→### Optional object properties
   159→#### `P.optional(pattern)`
   197→### Union & intersection patterns
   201→#### `P.union(...patterns)`
   234→#### `P.intersection(...patterns)`
   265→### Select with sub pattern
   296→### Infer the matching types from a pattern
   298→#### `P.infer<typeof pattern>`
   334→### New type specific wildcards
   336→#### `P.symbol`
   346→#### `P.bigint`
docs/v4-to-v5-migration-guide.md
     1→# TS-Pattern v4 to v5 Migration Guide
     5→# Breaking changes
     7→## TypeScript v5
    11→## `.with` is now evaluated eagerly
    42→## Matching on Map and Sets
    63→# New features
    65→## chainable methods
    71→### P.number methods
   100→### P.string methods
   122→### Global methods
   156→## Variadic tuple patterns
   214→## `.returnType`
jest.config.cjs
src/errors.ts
     5→export class NonExhaustiveError
     6→  constructor
src/index.ts
src/internals/helpers.ts
src/internals/symbols.ts
src/is-matching.ts
    11→type PatternConstraint
    53→export function isMatching
src/match.ts
     7→type MatchState
    11→const unmatched
    32→export function match
    47→class MatchExpression
    48→  constructor
    50→  with
    94→  when
   110→  otherwise
   115→  exhaustive
   120→  run
   124→  returnType
   128→  narrow
   133→function defaultCatcher
src/patterns.ts
    81→export type unstable_Matchable
   100→export type unstable_Matcher
   116→export type infer
   131→export type narrow
   136→function chainable
   148→const variadic
   165→function arrayChainable
   187→export function optional
   217→type UnwrapArray
   219→type UnwrapSet
   221→type UnwrapMapKey
   223→type UnwrapMapValue
   225→type UnwrapRecordKey
   227→type UnwrapRecordValue
   229→type WithDefault
   246→export function array
   299→export function set
   336→const setEvery
   362→export function map
   410→const mapEvery
   445→export function record
   505→const recordEvery
   536→export function intersection
   572→export function union
   611→export function not
   646→export function when
   696→export function select
   734→function isUnknown
   738→function isNumber
   742→function isString
   746→function isBoolean
   750→function isBigInt
   754→function isSymbol
   758→function isNullish
   762→function isNonNullable
   766→type AnyConstructor
   768→function isInstanceOf
   782→export const any
   793→export const unknown
   805→export const _
   817→const startsWith
   831→const endsWith
   845→const minLength
   857→const length
   869→const maxLength
   881→const includes
   895→const regex
   900→const stringChainable
   928→export const string
   940→const between
   955→const lt
   969→const gt
   983→const lte
   997→const gte
  1011→const int
  1023→const finite
  1035→const positive
  1047→const negative
  1050→const numberChainable
  1075→export const number
  1087→const betweenBigInt
  1106→const ltBigInt
  1120→const gtBigInt
  1134→const lteBigInt
  1148→const gteBigInt
  1162→const positiveBigInt
  1174→const negativeBigInt
  1177→const bigintChainable
  1201→export const bigint
  1211→export const boolean
  1221→export const symbol
  1231→export const nullish
  1241→export const nonNullable
  1251→export function instanceOf
  1274→export function shape
src/types/BuildMany.ts
src/types/DeepExclude.ts
src/types/DistributeUnions.ts
src/types/ExtractPreciseValue.ts
src/types/FindSelected.ts
src/types/InvertPattern.ts
src/types/IsMatching.ts
src/types/Match.ts
src/types/Pattern.ts
src/types/helpers.ts
src/types/index.ts
