tests/snapshots/snapshots__budget_ts_pattern_root_level2.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3000 → level 2 (1468 words)

README.md
    40→## About
    48→## Features
    59→## What is Pattern Matching?
    67→## Installation
    87→## Want to become a TypeScript Expert?
    91→# Documentation
   128→## Sandbox examples
   139→## Getting Started
   143→### Example: a state reducer with ts-pattern
   209→### match(value)
   220→### .returnType\<OutputType\>()
   230→### .with(pattern, handler)
   252→### P.select(name?)
   299→### P.not(pattern)
   310→### `P.when()` and guard functions
   319→#### using P.when(predicate)
   334→#### Passing a guard function to `.with(...)`
   349→### the `P._` wildcard
   364→### .exhaustive(), .otherwise() and .run()
   380→### Matching several patterns
   415→## API Reference
   417→### `match`
   425→#### Signature
   431→#### Arguments
   437→### `.with`
   444→#### Signature
   471→#### Arguments
   490→### `.when`
   497→#### Signature
   506→#### Arguments
   516→### `.returnType`
   528→#### Signature
   534→#### Type arguments
   539→### `.exhaustive`
   572→#### Signature
   579→#### Example
   603→### `.otherwise`
   613→#### Signature
   619→#### Arguments
   627→### `.run`
   637→#### Signature
   643→### `.narrow`
   656→#### Signature
   662→#### Example
   680→### `isMatching`
   720→#### Signature
   732→#### Arguments
   742→## Patterns
   777→### Literals
   800→### Objects
   826→### Tuples (arrays)
   855→### Wildcards
   857→#### `P._` wildcard
   876→#### `P.string` wildcard
   894→#### `P.number` wildcard
   912→#### `P.boolean` wildcard
   931→#### `P.nullish` wildcard
   952→#### `P.nonNullable` wildcard
   969→#### `P.bigint` wildcard
   986→#### `P.symbol` wildcard
  1003→### `P.array` patterns
  1030→### Matching variadic tuples with `P.array`
  1051→### `P.record` patterns
  1113→### `P.set` patterns
  1136→### `P.map` patterns
  1166→### `P.when` patterns
  1194→### `P.not` patterns
  1217→### `P.select` patterns
  1298→### `P.optional` patterns
  1318→### `P.instanceOf` patterns
  1350→### `P.union` patterns
  1375→### `P.intersection` patterns
  1405→## `P.string` predicates
  1409→### `P.string.startsWith`
  1422→### `P.string.endsWith`
  1435→### `P.string.minLength`
  1448→### `P.string.length`
  1461→### `P.string.maxLength`
  1474→### `P.string.includes`
  1487→### `P.string.regex`
  1500→## `P.number` and `P.bigint` predicates
  1504→### `P.number.between`
  1517→### `P.number.lt`
  1530→### `P.number.gt`
  1543→### `P.number.lte`
  1556→### `P.number.gte`
  1569→### `P.number.int`
  1582→### `P.number.finite`
  1595→### `P.number.positive`
  1608→### `P.number.negative`
  1621→## Types
  1623→### `P.infer`
  1653→### `P.narrow`
  1667→### `P.Pattern`
  1679→### Type inference
  1685→#### Type narrowing
  1732→#### Type guard function
  1748→#### Exhaustiveness checking
  1766→## Inspirations
docs/roadmap.md
     1→### Roadmap
docs/v3-to-v4-migration-guide.md
     1→# TS-Pattern v3 to v4 Migration Guide
     3→## Breaking changes
     5→### Imports
    39→#### `__`
    57→#### `select()`, `not()`, `when()`
    79→#### `Pattern` type
    91→### list patterns
   111→### NaN
   122→## New features
   126→### Arrays and unary tuples
   128→#### `P.array(pattern)`
   157→### Optional object properties
   159→#### `P.optional(pattern)`
   197→### Union & intersection patterns
   201→#### `P.union(...patterns)`
   234→#### `P.intersection(...patterns)`
   265→### Select with sub pattern
   296→### Infer the matching types from a pattern
   298→#### `P.infer<typeof pattern>`
   334→### New type specific wildcards
   336→#### `P.symbol`
   346→#### `P.bigint`
docs/v4-to-v5-migration-guide.md
     1→# TS-Pattern v4 to v5 Migration Guide
     5→# Breaking changes
     7→## TypeScript v5
    11→## `.with` is now evaluated eagerly
    42→## Matching on Map and Sets
    63→# New features
    65→## chainable methods
    71→### P.number methods
   100→### P.string methods
   122→### Global methods
   156→## Variadic tuple patterns
   214→## `.returnType`
jest.config.cjs
src/errors.ts
     5→export class NonExhaustiveError extends Error {
     6→  constructor(public input: unknown) {
src/index.ts
src/internals/helpers.ts
    12→export const isObject
    16→export const isMatcher
    24→const isOptionalPattern
    32→export const matchPattern
   120→export const getSelectionKeys
   132→export const flatMap
src/internals/symbols.ts
    16→export const matcher
    17→export type matcher
    19→export const unset
    20→export type unset
    22→export const isVariadic
    23→export type isVariadic
    26→export const anonymousSelectKey
    27→export type anonymousSelectKey
    29→export const override
    30→export type override
src/is-matching.ts
    11→type PatternConstraint
    53→export function isMatching<const p extends Pattern<any>>(
    54→  ...args: [pattern: p, value?: any]
    55→): boolean | ((vale: any) => boolean) {
src/match.ts
     7→type MatchState
    11→const unmatched
    32→export function match<const input, output = symbols.unset>(
    33→  value: input
    34→): Match<input, output> {
    47→class MatchExpression
    48→  constructor(private input: input, private state: MatchState<output>) {}
    50→  with(...args: any[]): MatchExpression<input, output> {
    94→  when(
    95→    predicate: (value: input) => unknown,
    96→    handler: (selection: input, value: input) => output
    97→  ): MatchExpression<input, output> {
   110→  otherwise(handler: (value: input) => output): output {
   115→  exhaustive(unexpectedValueHandler = defaultCatcher): output {
   120→  run(): output {
   124→  returnType() {
   128→  narrow() {
   133→function defaultCatcher
src/patterns.ts
    81→export type unstable_Matchable<
    82→  narrowedOrFn,
    83→  input = unknown,
    84→  pattern = never
    85→> = CustomP<input, pattern, narrowedOrFn>;
   100→export type unstable_Matcher<
   101→  narrowedOrFn,
   102→  input = unknown,
   103→  pattern = never
   104→> = ReturnType<CustomP<input, pattern, narrowedOrFn>[matcher]>;
   116→export type infer<pattern> = InvertPattern<NoInfer<pattern>, unknown>;
   131→export type narrow<input, pattern> = ExtractPreciseValue<
   132→  input,
   133→  InvertPattern<pattern, input>
   134→>;
   136→function chainable
   148→const variadic
   165→function arrayChainable
   187→export function optional<
   188→  input,
   189→  const pattern extends unknown extends input
   190→    ? UnknownValuePattern
   191→    : Pattern<input>
   192→>(pattern: pattern): Chainable<OptionalP<input, pattern>, 'optional'> {
   217→type UnwrapArray
   219→type UnwrapSet
   221→type UnwrapMapKey
   223→type UnwrapMapValue
   225→type UnwrapRecordKey
   227→type UnwrapRecordValue
   229→type WithDefault
   246→export function array(
   247→  ...args: [pattern?: any]
   248→): ArrayChainable<ArrayP<any, any>> {
   299→export function set<
   300→  input,
   301→  const pattern extends Pattern<WithDefault<UnwrapSet<input>, unknown>>
   302→>(...args: [pattern?: pattern]): Chainable<SetP<input, pattern>> {
   336→const setEvery
   362→export function map<
   363→  input,
   364→  const pkey extends Pattern<WithDefault<UnwrapMapKey<input>, unknown>>,
   365→  const pvalue extends Pattern<WithDefault<UnwrapMapValue<input>, unknown>>
   366→>(
   367→  ...args: [patternKey?: pkey, patternValue?: pvalue]
   368→): Chainable<MapP<input, pkey, pvalue>> {
   410→const mapEvery
   445→export function record(
   446→  ...args: [patternKey?: unknown, patternValue?: unknown]
   447→): Chainable<RecordP<unknown, unknown, unknown>> {
   505→const recordEvery
   536→export function intersection<
   537→  input,
   538→  const patterns extends readonly [Pattern<input>, ...Pattern<input>[]]
   539→>(...patterns: patterns): Chainable<AndP<input, patterns>> {
   572→export function union<
   573→  input,
   574→  const patterns extends readonly [Pattern<input>, ...Pattern<input>[]]
   575→>(...patterns: patterns): Chainable<OrP<input, patterns>> {
   611→export function not<
   612→  input,
   613→  const pattern extends Pattern<input> | UnknownValuePattern
   614→>(pattern: pattern): Chainable<NotP<input, pattern>> {
   646→export function when<input, predicate extends (value: input) => unknown>(
   647→  predicate: predicate
   648→): GuardP<
   649→  input,
   650→  predicate extends (value: any) => value is infer narrowed ? narrowed : never
   651→> {
   696→export function select(
   697→  ...args: [keyOrPattern?: unknown | string, pattern?: unknown]
   698→): Chainable<SelectP<string>, 'select' | 'or' | 'and'> {
   734→function isUnknown
   738→function isNumber
   742→function isString
   746→function isBoolean
   750→function isBigInt
   754→function isSymbol
   758→function isNullish
   762→function isNonNullable
   766→type AnyConstructor
   768→function isInstanceOf
   782→export const any: UnknownPattern = chainable(when(isUnknown));
   793→export const unknown: UnknownPattern = chainable(when(isUnknown));
   805→export const _ = any;
   817→const startsWith
   831→const endsWith
   845→const minLength
   857→const length
   869→const maxLength
   881→const includes
   895→const regex
   900→const stringChainable
   928→export const string: StringPattern = stringChainable(when(isString));
   940→const between
   955→const lt
   969→const gt
   983→const lte
   997→const gte
  1011→const int
  1023→const finite
  1035→const positive
  1047→const negative
  1050→const numberChainable
  1075→export const number: NumberPattern = numberChainable(when(isNumber));
  1087→const betweenBigInt
  1106→const ltBigInt
  1120→const gtBigInt
  1134→const lteBigInt
  1148→const gteBigInt
  1162→const positiveBigInt
  1174→const negativeBigInt
  1177→const bigintChainable
  1201→export const bigint: BigIntPattern = bigintChainable(when(isBigInt));
  1211→export const boolean: BooleanPattern = chainable(when(isBoolean));
  1221→export const symbol: SymbolPattern = chainable(when(isSymbol));
  1231→export const nullish: NullishPattern = chainable(when(isNullish));
  1241→export const nonNullable: NonNullablePattern = chainable(when(isNonNullable));
  1251→export function instanceOf<T extends AnyConstructor>(
  1252→  classConstructor: T
  1253→): Chainable<GuardP<unknown, InstanceType<T>>> {
  1274→export function shape(pattern: UnknownValuePattern) {
src/types/BuildMany.ts
     4→export type BuildMany
    11→type BuildOne
    19→export type SetDeep
src/types/DeepExclude.ts
     3→export type DeepExclude
src/types/DistributeUnions.ts
    41→export type DistributeMatchingUnions
    46→export type FindUnionsMany
    80→export type FindUnions
   174→export type ArrayToVariadicUnion
   183→export type Distribute
src/types/ExtractPreciseValue.ts
    13→export type ExtractPreciseValue
    81→type ExtractPreciseArrayValue
src/types/FindSelected.ts
    11→type SelectionsRecord
    13→export type None
    16→export type Some
    21→export type SelectionType
    24→type MapOptional
    31→type MapList
    38→type ReduceFindSelectionUnion
    47→type FindSelectionUnionInArray
    96→export type FindSelectionUnion
   159→export type SeveralAnonymousSelectError
   165→export type MixedNamedAndAnonymousSelectError
   174→export type SelectionToArgs
   185→export type Selections
   191→export type FindSelected
src/types/InvertPattern.ts
    29→type OptionalKeys
    39→type ReduceUnion
    47→type ReduceIntersection
    55→type InvertArrayPattern
   106→export type InvertPattern
   110→type InvertPatternInternal
   180→export type ReduceIntersectionForExclude
   192→export type ReduceUnionForExclude
   204→type ExcludeIfExists
   231→type InvertArrayPatternForExclude
   303→export type InvertPatternForExclude
   307→type InvertPatternForExcludeInternal
src/types/IsMatching.ts
    12→type IsMatchingTuple
    26→type IsMatchingArray
    57→export type IsMatching
src/types/Match.ts
     8→export type PickReturnValue
    10→interface NonExhaustiveError
    14→interface TSPatternError
    22→export type Match
   132→  with
   159→  when
   180→  otherwise
   205→  run
   225→  narrow
   245→type DeepExcludeAll
   251→type MakeTuples
   261→type Exhaustive
src/types/Pattern.ts
     7→export type MatcherType
    23→export type MatcherProtocol
    38→export type MatchResult
    50→export interface Matcher
    71→type PatternMatcher
    74→export type MatchedValue
    79→export type AnyMatcher
    81→type UnknownMatcher
    83→export type CustomP
    94→export type ArrayP
    96→export type RecordP
   102→export type OptionalP
   104→export type MapP
   106→export type SetP
   108→export type AndP
   110→export type OrP
   112→export type NotP
   114→export type GuardP
   116→export type GuardExcludeP
   124→export type SelectP
   130→export type AnonymousSelectP
   132→export interface Override
   136→export type UnknownProperties
   138→export type UnknownValuePattern
   157→export type Pattern
   161→type KnownPattern
   163→type KnownPatternInternal
   174→type ObjectPattern
   180→type ArrayPattern
   190→export type UnknownPattern
   191→export type StringPattern
   192→export type NumberPattern
   193→export type BooleanPattern
   194→export type BigIntPattern
   195→export type SymbolPattern
   196→export type NullishPattern
   201→export type NonNullablePattern
   203→type MergeGuards
   210→export type Chainable
   223→      optional
   237→      and
   253→      or
   269→      select
   276→export type StringChainable
   291→      startsWith
   306→      endsWith
   321→      minLength
   336→      length
   351→      maxLength
   366→      includes
   381→      regex
   391→export type NumberChainable
   407→      between
   423→      lt
   438→      gt
   453→      lte
   468→      gte
   483→      int
   496→      finite
   509→      positive
   522→      negative
   530→export type BigIntChainable
   546→      between
   562→      lt
   577→      gt
   592→      lte
   607→      gte
   622→      positive
   635→      negative
   643→export type Variadic
   645→export type ArrayChainable
   661→      optional
   678→      select
src/types/helpers.ts
     1→export type ValueOf
     3→export type Values
    14→export type LeastUpperBound
    16→export type Contains
    25→export type UnionToIntersection
    31→export type IsUnion
    33→export type UnionToTuple
    42→export type Flatten
    49→export type Equal
    55→export type Expect
    57→export type IsAny
    59→export type IsNever
    61→export type Length
    63→export type Iterator
    68→export type Next
    69→export type Prev
    73→export type Take
    83→export type Drop
    92→export type UpdateAt
   105→export type BuiltInObjects
   113→export type IsPlainObject
   122→export type Compute
   126→export type IntersectObjects
   138→export type WithDefault
   140→export type IsLiteral
   164→export type Primitives
   173→export type NonLiteralPrimitive
   175→export type TupleKeys
   177→export type Union
   182→export type GuardValue
   188→export type GuardFunction
   192→export type Some
   196→export type All
   200→export type Extends
   202→export type Not
   204→type AllKeys
   207→export type MergeUnion
   217→export type IsFixedSizeTuple
   220→export type IsTuple
   227→export type IsStrictArray
   229→export type IsReadonlyArray
   235→export type MaybeAddReadonly
   240→export type MapKey
   242→export type MapValue
   244→export type SetValue
   246→export type RecordKey
   248→export type RecordValue
   250→export type ReadonlyArrayValue
   254→export type ExtractPlainObject
   260→export type GetKey
   266→export interface Fn
   271→export type Call
   275→export type IsOptionalKeysOf
src/types/index.ts
