tests/snapshots/snapshots__budget_ts_pattern_src_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1002 tokens)

errors.ts
     2→ * Error when the given input value does not match any included pattern
     3→ * and .exhaustive() was specified
     5→export class NonExhaustiveError extends Error {
     6→  constructor(public input: unknown) {

index.ts
     1→import * as Pattern from './patterns';

internals/helpers.ts
     7→import * as symbols from './symbols';
    24→const isOptionalPattern …

internals/symbols.ts
     2→ * Symbols used internally within ts-pattern to construct and discriminate
     3→ * Guard, Not, and Select, and AnonymousSelect patterns
     4→ *
      → …
    16→export const matcher = Symbol.for('@ts-pattern/matcher');

is-matching.ts
    11→type PatternConstraint …
    53→export function isMatching …

match.ts
    17→ * `match` creates a **pattern matching expression**.
      → …
    32→export function match<const input, output = symbols.unset>(
    33→  value: input
    34→): Match<input, output> {
    47→class MatchExpression<input, output> {
   133→function defaultCatcher(input: unknown): never {

patterns.ts
     8→import { matchPattern, getSelectionKeys, flatMap } from './internals/helpers';
   187→export function optional …
   536→export function intersection …
   572→export function union …
   611→export function not …
  1251→export function instanceOf …

types/BuildMany.ts
     1→import { Iterator, IsOptionalKeysOf, UpdateAt, ValueOf } from './helpers';
     4→export type BuildMany …
    11→type BuildOne …
    19→export type SetDeep …

types/DeepExclude.ts
     1→import { DistributeMatchingUnions } from './DistributeUnions';
     3→export type DeepExclude<a, b> = Exclude<DistributeMatchingUnions<a, b>, b>;

types/DistributeUnions.ts
    41→export type DistributeMatchingUnions …
    46→export type FindUnionsMany …
    80→export type FindUnions …
   174→export type ArrayToVariadicUnion …
   183→export type Distribute …

types/ExtractPreciseValue.ts
     1→import type { Override } from './Pattern …
     2→import type { …
    13→export type ExtractPreciseValue …
    81→type ExtractPreciseArrayValue …

types/FindSelected.ts

types/InvertPattern.ts
   106→export type InvertPattern …
   180→export type ReduceIntersectionForExclude …
   192→export type ReduceUnionForExclude …
   303→export type InvertPatternForExclude …

types/IsMatching.ts
     1→import { …
    57→export type IsMatching …

types/Match.ts
     8→export type PickReturnValue<a, b> = a extends symbols.unset ? b : a;
    19→ * #### Match
    20→ * An interface to create a pattern matching clause.
    22→export type Match<
    23→  i,
    24→  o,
    25→  handledCases extends any[] = [],
    26→  inferredOutput = never
    27→> = {
   132→  with …
   159→  when …
   180→  otherwise …
   205→  run …
   225→  narrow …
   245→type DeepExcludeAll …
   251→type MakeTuples<ps extends readonly any[], value> = {
   261→type Exhaustive …

types/Pattern.ts
    50→export interface Matcher …
   132→export interface Override<a> {
   133→  [symbols.override]: a;
   134→}
   147→ * `Pattern<a>` is the generic type for patterns matching a value of type `a`. A pattern can be any (nested) javascript value.
   148→ *
      → …
   157→export type Pattern<a = unknown> = unknown extends a
   158→  ? UnknownValuePattern
   159→  : KnownPattern<a>;
   269→      select …
   678→      select …

types/helpers.ts
    14→export type LeastUpperBound …
   182→export type GuardValue …
   204→type AllKeys …
   266→export interface Fn {
   267→  input: unknown;
   268→  output: unknown;
   269→}
